OCRとPDF生成の基盤を追加

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.110.0
-fpdf2==2.7.9
+google-cloud-storage==2.16.0
+google-cloud-vision==3.7.2
 langchain==0.2.6
 langchain-google-genai==1.0.6
+playwright==1.44.0
 uvicorn[standard]==0.29.0
