--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "@tanstack/react-query": "5.59.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
