--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "client-r",
+  "name": "client",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "lint": "eslint .",
+    "format": "prettier --check ."
   },
   "dependencies": {
     "@react-router/node": "7.10.1",
@@ -18,12 +20,19 @@
     "react-router": "7.10.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@react-router/dev": "7.10.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.35.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "prettier": "^3.3.3",
     "tailwindcss": "^4.1.13",
+    "typescript-eslint": "^8.10.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
