--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "isbot": "^5.1.31",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-pdf": "^10.3.0",
     "react-router": "7.10.1"
   },
   "devDependencies": {
@@ -32,8 +33,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "prettier": "^3.3.3",
     "tailwindcss": "^4.1.13",
-    "typescript-eslint": "^8.10.0",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.10.0",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
   }
