--- a/server/cloudbuild.yml
+++ b/server/cloudbuild.yml
@@ -8,7 +8,8 @@ substitutions:
   _GCP_PROJECT: your_project_id
   _GCS_BUCKET: your_bucket_name
   _GCS_OUTPUT_PREFIX: vision-output
-  # _GEMINI_API_KEY:
+  # _GOOGLE_API_KEY:
+  # _GOOGLE_SEARCH_CX:
 
 steps:
   # ステップ1: Docker イメージを作成
@@ -67,7 +68,9 @@ steps:
         "--set-env-vars",
         "GEMINI_MODEL=${_GEMINI_MODEL}",
         "--set-env-vars",
-        "GEMINI_API_KEY=${_GEMINI_API_KEY}",
+        "GOOGLE_API_KEY=${_GOOGLE_API_KEY}",
+        "--set-env-vars",
+        "GOOGLE_SEARCH_CX=${_GOOGLE_SEARCH_CX}",
         "--set-env-vars",
         "GCP_PROJECT=${_GCP_PROJECT}",
         "--set-env-vars",
