--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -17,4 +17,5 @@ services:
       - GCS_BUCKET=${GCS_BUCKET}
       - GCS_OUTPUT_PREFIX=${GCS_OUTPUT_PREFIX}
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
-      - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - GOOGLE_SEARCH_CX=${GOOGLE_SEARCH_CX}
